# rust-experimental

./: .gitignore  README.md
password_generator/src/: README.md  main.rs
searching_algorithms/binary_search/: README.md
searching_algorithms/binary_search/src/: lib.rs
web_development/authentication_server/: Cargo.toml  README.md
web_development/authentication_server/src/: .env.sample  main.rs
web_development/authentication_server/src/api/: account_controller.rs
web_development/authentication_server/src/config/: app.rs
web_development/authentication_server/src/models/: secret.key.sample  user_token.rs
web_development/authentication_server/src/services/: auth_service.rs
