[package]
name = "authentication_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
serde = {version="1.0.152", features = ["derive"] }
serde_json = "1.0.56"
base64 = "0.12.0"
hmac = "0.12.1"
sha2 = "0.10.6"
env_logger = "0.10.0"
dotenv = "0.15.0"
futures = "0.3"